# sentence-transformers-rs

./: .gitignore  Cargo.toml  README.md
benches/: README.md  bench.rs
examples/build_custom/: README.md  main.rs
examples/semantic_similarity/: README.md  main.rs
src/: activation.rs  config.rs  dense.rs  error.rs  lib.rs  normalize.rs  pooling.rs  sentence_transformer.rs  transformers.rs  utils.rs
src/models/: bert.rs  distilbert.rs  mod.rs  mpnet.rs  xlm_roberta.rs
tests/: embedding_tests.rs
