[package]
name = "sentence-transformers-rs"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of SentenceTransformers using Candle"

license = "Apache-2.0"
repository = "https://github.com/jwnz/sentence-transformers-rs"

[dependencies]
candle-core = "0.9.1"
candle-nn = "0.9.1"
hf-hub = "0.4.3"
tokenizers = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.14.0"
thiserror = "1.0.63"
strum = "0.27.2"
strum_macros = "0.27.2"

[dev-dependencies]
criterion = "0.5"
rand = "0.9.2"
rand_distr = "0.5.1"

[features]
default = []
mkl = ["candle-nn/mkl", "candle-core/mkl"]
cuda = ["candle-core/cuda", "candle-core/cudnn", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]

[[bench]]
name = "bench"
harness = false
